feat: implement database trade history, dashboard view, startup scripts, and achieve 100% test coverage